--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p style="color: white">Side Bar</p>
             </div>
             <div id="bodyarea-div">
-                <p style="color: white">Body</p>
+                <p style="color: white">Welcome to Gamehub where you can realize your gaming dreams <br>that you have been dreaming for since you were a child!</p>
             </div>
         </div>
         <div id="footer-div">
