--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="footer-div">
-            <img src="C:\Users\202310658\Downloads\logos\Gamehub.png" height = 100px width= 100px>
+            <img src="Gamehub.png" height = 100px width= 100px>
         </div>
         </div>
     </body>
