--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="wrapper-div">
         <div id="logo-div">
-            <img src="C:\Users\202310658\Downloads\logos\Gamehub.png" height = 150px width= 150px>
+            <img src="Gamehub.png" height = 150px width= 150px>
         </div>
         <div id="nav-div">
             <p style="color: white">Navigation</p>
