--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <body>
         <div id="wrapper-div">
         <div id="logo-div">
-            <img src="Gamehub.png" height = 150px width= 150px>
+            <img src="C:\Users\202310658\Downloads\logos\Gamehub.png" height = 150px width= 150px>
         </div>
         <div id="nav-div">
-            <p style="color: white">Navigation</p>
+            <p style="color: white">Welcome to Gamehub!!</p>
         </div>
         <div id="headerbanner-div">
-            <p style="color: white">Header / Banner</p>
+            <p style="color: white">"The right man in the wrong place can make all the difference in the world." - G-Man</p>
         </div>
         <div id="main-div" class="clearfix">
             <div id="sidebar-div">
                 <p style="color: white">Side Bar</p>
             </div>
             <div id="bodyarea-div">
-                <p style="color: white">Welcome to Gamehub where you can realize your gaming dreams <br>that you have been dreaming for since you were a child!</p>
+                <p style="color: white">Welcome to Gamehub where you can realize your gaming dreams 
+                    <br>that you have been dreaming for since you were a child!</p>
             </div>
         </div>
         <div id="footer-div">
-            <img src="Gamehub.png" height = 100px width= 100px>
+            <img src="C:\Users\202310658\Downloads\logos\Gamehub.png" height = 100px width= 100px>
         </div>
         </div>
     </body>
