--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
         <div id="logo-div">
             <img src="Gamehub.png" height = 150px width= 150px>
         </div>
-        <div id="nav-div">
-            <p style="color: white">Welcome to Gamehub!!</p>
-        </div>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="https://rog.asus.com/ph/" target=”_blank”>Sponsor</a>
+          </div>
         <div id="headerbanner-div">
             <p style="color: white">"The right man in the wrong place can make all the difference in the world." - G-Man</p>
         </div>
         <div id="main-div" class="clearfix">
             <div id="sidebar-div">
-                <p style="color: white">Side Bar</p>
+                <a href = "https://rog.asus.com/ph/" target=”_blank”><img src="wp11472910-portrait-gaming-wallpapers.jpg" height= 500px width = 300px></a>
             </div>
             <div id="bodyarea-div">
                 <p style="color: white">Welcome to Gamehub where you can realize your gaming dreams 
